# CG_2018_WaveSimulation

./: .gitignore
CG_2018_WaveSimulation/: CG_2018_WaveSimulation.pro  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oglwidget.cpp  oglwidget.h  wave.cpp  wave.h  wavesurface.cpp  wavesurface.h
CG_2018_WaveSimulation/Dokumentation/: Documentation.aux  Documentation.out  Documentation.tex  Documentation.toc  Dok1.docx  Doku.aux  Doku.out  Doku.tex
CG_2018_WaveSimulation/OpenSG/: LICENSE.txt  OpenSG Web.url  README.txt  README_SupportLibs.txt  pathappend.vbs
CG_2018_WaveSimulation/OpenSG/Tutorials/: 01hello.dsp  02move.dsp  03share.dsp  04hiertransform.dsp  05geometry.dsp  06indexgeometry.dsp  07multiindexgeometry.dsp  08materials.dsp  09traverse.dsp  10loading.dsp  11picking.dsp  12ClusterServer.dsp  12ClusterServerX.dsp  13ClusterClient.cpp  13ClusterClient.dsp  14switch.dsp  15attachments.dsp  16lights.dsp  17deepClone.dsp  18opengl_slave.dsp  19LocalLights.dsp  20MaterialSort.dsp  21Shadows.dsp  22Shader.dsp  23videotexturebackground.dsp  24Shadows.dsp  25OcclusionCulling.dsp  26GeometryShader.dsp  27RationalSurface.dsp  28SortLastClusterClient.dsp  29FBOTexture.dsp  30ID_Buffer.dsp  BUILD.txt  Tutorials.dsp  Tutorials.dsw  vc80.idb
CG_2018_WaveSimulation/OpenSG/include/: tiffconf.h
CG_2018_WaveSimulation/OpenSG/lib/: Microsoft.VC80.CRT.manifest  OSGWindowGLUT.lib  OSGWindowGLUTD.lib  OSGWindowQT.lib  OSGWindowQTD.lib  OSGWindowWIN32.lib  OSGWindowWIN32D.lib  libjasper.lib  libjpeg.lib  libpng.lib  stlport_icl.exp  stlport_icl.lib  (+4 more)
(+1650 files in other folders)
